Fix backend deployment script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ jobs:
       - image: cimg/node:16.14.2
     steps:
       - checkout
-      - aws-cli/install
       - aws-cli/setup
       - eb/setup
       - run:
@@ -28,4 +27,6 @@ jobs:
           command: npm run deploy:frontend
       - run:
           name: Deploy backend
-          command: eb deploy Udagramapp-env
+          command: |
+          pwd
+          eb deploy Udagramapp-env
