--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,2 +1,21 @@
+branch-defaults:
+  main:
+    environment: Udagramapp-env
+environment-defaults:
+  Udagramapp-env:
+    branch: null
+    repository: null
 deploy:
   artifact: ./udagram-api/www/Archive.zip
+global:
+  application_name: udagram-app
+  default_ec2_keyname: null
+  default_platform: Node.js 16 running on 64bit Amazon Linux 2
+  default_region: us-east-1
+  include_git_submodules: true
+  instance_profile: null
+  platform_name: null
+  platform_version: null
+  profile: eb-cli
+  sc: git
+  workspace_type: Application
