--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,5 +28,4 @@ jobs:
       - run:
           name: Deploy backend
           command: |
-            pwd
-            eb deploy Udagramapp-env
+            eb deploy --staged
