Testing that my way works

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,4 +28,4 @@ jobs:
       - run:
           name: Deploy backend
           command: |
-            eb deploy --staged
+            eb deploy Udagramapp-env
