--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -5,6 +5,8 @@ environment-defaults:
   Udagramapp-env:
     branch: null
     repository: null
+deploy:
+  artifact: ./udagram-api/www/Archive.zip
 global:
   application_name: udagram-app
   default_ec2_keyname: null
