--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,10 @@ jobs:
           command: npm run build:api
       - run:
           name: Initialize the Elastic Beanstalk
-          command: eb init udagram-app -p node.js-16 -r $AWS_DEFAULT_REGION $TEST
+          command: eb init udagram-app -p node.js-16 -r
+      - run:
+          name: Passing environment variables
+          command: eb setenv $TEST
       - run:
           command: cat ./.elasticbeanstalk/config.yml
       - run:
