Finalize passing secrets

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,30 +11,28 @@ jobs:
       - aws-cli/setup
       - eb/setup
       - run:
-          name: Initialize the Elastic Beanstalk
-          command: eb init udagram-app -p node.js-16 -r $AWS_DEFAULT_REGION
-      - run:
-          name: Passing environment variables
-          command: eb setenv TEST=$TEST
-      - run:
-          name: Build backend
-          command: npm run build:api
+          name: Install frontend dependencies
+          command: npm run install:frontend
       - run:
           name: Install backend dependencies
           command: npm run install:api
-
-      - run:
-          command: cat ./.elasticbeanstalk/config.yml
-      - run:
-          name: Deploy backend
-          command: |
-            eb deploy Udagramapp-env
-      - run:
-          name: Install frontend dependencies
-          command: npm run install:frontend
       - run:
           name: Build frontend
           command: npm run build:frontend
       - run:
+          name: Build backend
+          command: npm run build:api
+      - run:
           name: Deploy frontend
           command: npm run deploy:frontend
+      - run:
+          name: Initialize the Elastic Beanstalk
+          command: eb init udagram-app -p node.js-16 -r $AWS_DEFAULT_REGION
+      - run:
+          name: Passing environment variables
+          command: |
+            eb setenv DB_PORT=$DB_PORT JWT_SECRET=$JWT_SECRET POSTGRES_HOST=$POSTGRES_HOST POSTGRES_PASSWORD=$POSTGRES_PASSWORD POSTGRES_USERNAME=$POSTGRES_USERNAME
+      - run:
+          name: Deploy backend
+          command: |
+            eb deploy Udagramapp-env
